--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "jest": "jest",
     "tsc-test": "tsc --project . --noEmit",
     "examples:01_minimal": "DIR=01_minimal EXT=js webpack serve",
-    "examples:02_typescript": "DIR=02_typescript EXT=tsx webpack serve"
+    "examples:02_typescript": "DIR=02_typescript EXT=tsx webpack serve",
+    "examples:03_joi": "DIR=03_joi EXT=tsx webpack serve"
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -62,6 +63,7 @@
     "eslint-plugin-react": "^7.29.4",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
+    "joi": "^17.6.0",
     "jotai": "^1.6.4",
     "microbundle": "^0.14.2",
     "npm-run-all": "^4.1.5",
