--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "tsc-test": "tsc --project . --noEmit",
     "examples:01_minimal": "DIR=01_minimal EXT=js webpack serve",
     "examples:02_typescript": "DIR=02_typescript EXT=tsx webpack serve",
-    "examples:03_joi": "DIR=03_joi EXT=tsx webpack serve"
+    "examples:03_joi": "DIR=03_joi EXT=tsx webpack serve",
+    "examples:04_demo": "DIR=04_demo EXT=js webpack serve"
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -56,6 +57,7 @@
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "bumpp": "^8.2.1",
+    "css-loader": "^6.7.1",
     "eslint": "^8.13.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -73,13 +75,18 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "regenerator-runtime": "^0.13.9",
+    "style-loader": "^3.3.1",
     "ts-jest": "^27.1.4",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "prismjs": "^1.28.0",
+    "prism-react-renderer": "^1.3.5",
+    "normalize.css": "^8.0.1",
+    "styled-components": "^5.3.5"
   },
   "peerDependencies": {
     "jotai": "*"
