--- a/examples/04_demo/package.json
+++ b/examples/04_demo/package.json
@@ -7,7 +7,12 @@
     "jotai-form": "latest",    
     "react": "latest",
     "react-dom": "latest",
-    "react-scripts": "latest"
+    "react-scripts": "latest",
+    "yup": "^0.32.11",
+    "prismjs": "^1.28.0",
+    "prism-react-renderer": "^1.3.5",
+    "normalize.css": "^8.0.1",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
