--- a/examples/03_joi/package.json
+++ b/examples/03_joi/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react": "latest",
+    "@types/react-dom": "latest",
     "joi": "latest",
     "jotai": "latest",
     "jotai-form": "latest",
