--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/react-dom": "^18.0.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
+    "add": "^2.0.6",
     "bumpp": "^8.2.1",
     "css-loader": "^6.7.1",
     "eslint": "^8.13.0",
@@ -72,7 +73,7 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
     "joi": "^17.6.0",
-    "jotai": "^1.6.4",
+    "jotai": "https://pkg.csb.dev/pmndrs/jotai/commit/b86acc75/jotai",
     "microbundle": "^0.14.2",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
@@ -90,10 +91,11 @@
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1",
+    "yarn": "^1.22.19",
     "yup": "^0.32.11",
     "zod": "^3.18.0"
   },
   "peerDependencies": {
-    "jotai": "*"
+    "jotai": ">=1.11.0"
   }
 }
