--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
     "joi": "^17.6.0",
-    "jotai": "https://pkg.csb.dev/pmndrs/jotai/commit/b86acc75/jotai",
+    "jotai": "^1.11.0",
     "microbundle": "^0.14.2",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
