--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/jotai-labs/jotai-form.git"
+    "url": "https://github.com/jotaijs/jotai-form.git"
   },
   "source": "./src/index.ts",
   "main": "./dist/index.umd.js",
