feat: Add Form Controls atom (#14)
* add todo and idea

* feat: base implementation

* fix import

* feat: setTouched, onFocus

handlers for field level focus and touch
handlers and also setTouched impl

* fix: eslint issues

* add test cases and minor type fixes

* fix: cleanup writable atom inference

* fix: types for simple inference

* fix: simply type inference for keys

* use internal api to make it pure js

* chore: rename exposed type to be properly named

* fix: polish and naming

* test: update tests to current impl

* fix: force boolean

* chore: update examples

* chore: update readme

--- a/package.json
+++ b/package.json
@@ -40,11 +40,15 @@
     "examples:02_typescript": "DIR=02_typescript EXT=tsx webpack serve",
     "examples:03_joi": "DIR=03_joi EXT=tsx webpack serve",
     "examples:04_demo": "DIR=04_demo EXT=js webpack serve",
-    "examples:05_zod": "DIR=05_zod EXT=tsx webpack serve"
+    "examples:05_zod": "DIR=05_zod EXT=tsx webpack serve",
+    "examples:06_form_controls": "DIR=06_form_controls EXT=js webpack serve"
   },
   "jest": {
     "testEnvironment": "jsdom",
-    "preset": "ts-jest/presets/js-with-ts"
+    "preset": "ts-jest/presets/js-with-ts",
+    "testPathIgnorePatterns": [
+      "__tests__/components"
+    ]
   },
   "keywords": [
     "jotai",
