--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "examples:03_joi": "DIR=03_joi EXT=tsx webpack serve",
     "examples:04_demo": "DIR=04_demo EXT=js webpack serve",
     "examples:05_zod": "DIR=05_zod EXT=tsx webpack serve",
-    "examples:06_form_controls": "DIR=06_form_controls EXT=js webpack serve"
+    "examples:06_form_controls": "DIR=06_form_controls EXT=js webpack serve",
+    "examples:07_valibot": "DIR=07_valibot EXT=tsx webpack serve"
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -56,7 +57,6 @@
     "form"
   ],
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^27.5.2",
@@ -90,6 +90,7 @@
     "ts-jest": "^27.1.5",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
+    "valibot": "^0.21.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
