chore: package updates

--- a/examples/02_typescript/package.json
+++ b/examples/02_typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jotai-form-example",
+  "name": "jotai-form-example-typescript",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
