--- a/package.json
+++ b/package.json
@@ -60,42 +60,43 @@
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^27.5.2",
-    "@types/react-dom": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
     "bumpp": "^8.2.1",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.27.0",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.55.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.10",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.5.1",
-    "joi": "^17.7.0",
-    "jotai": "^2.2.2",
+    "eslint-plugin-react": "^7.33.2",
+    "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "joi": "^17.11.0",
+    "jotai": "^2.6.0",
     "microbundle": "^0.14.2",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.8",
     "prism-react-renderer": "^1.3.5",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "regenerator-runtime": "^0.13.10",
-    "style-loader": "^3.3.1",
-    "styled-components": "^5.3.6",
-    "ts-jest": "^27.1.5",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.8.4",
+    "regenerator-runtime": "^0.13.11",
+    "style-loader": "^3.3.3",
+    "styled-components": "^5.3.11",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.2.0",
     "valibot": "^0.21.0",
-    "webpack": "^5.75.0",
+    "webpack": "^5.89.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
+    "webpack-dev-server": "^4.15.1",
     "yup": "^0.32.11",
-    "zod": "^3.19.1"
+    "zod": "^3.22.4"
   },
   "peerDependencies": {
     "jotai": ">=2"
