--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
       "module": "./dist/index.modern.js",
       "import": "./dist/index.modern.mjs",
       "default": "./dist/index.umd.js"
+    },
+    "./react": {
+      "types": "./dist/react/src/react/index.d.ts",
+      "module": "./dist/react/index.modern.js",
+      "import": "./dist/react/index.modern.mjs",
+      "default": "./dist/react/index.umd.js"
     }
   },
   "sideEffects": false,
@@ -29,8 +35,7 @@
     "dist"
   ],
   "scripts": {
-    "compile": "microbundle build -f modern,umd --globals react=React",
-    "postcompile": "cp dist/index.modern.mjs dist/index.modern.js && cp dist/index.modern.mjs.map dist/index.modern.js.map",
+    "compile": "NODE_ENV=production rollup -c",
     "test": "run-s eslint tsc-test jest",
     "eslint": "eslint --ext .js,.ts,.tsx .",
     "jest": "jest",
@@ -65,6 +70,7 @@
     "@typescript-eslint/parser": "^6.13.1",
     "bumpp": "^8.2.1",
     "css-loader": "^6.8.1",
+    "esbuild": "^0.20.2",
     "eslint": "^8.55.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.10.0",
@@ -77,7 +83,6 @@
     "jest-environment-jsdom": "^29.7.0",
     "joi": "^17.11.0",
     "jotai": "^2.6.0",
-    "microbundle": "^0.14.2",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
@@ -86,11 +91,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "regenerator-runtime": "^0.13.11",
+    "rollup": "^4.14.2",
+    "rollup-plugin-esbuild": "^6.1.1",
+    "rollup-plugin-typescript2": "^0.36.0",
     "style-loader": "^3.3.3",
     "styled-components": "^5.3.11",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.2.0",
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.5",
     "valibot": "^0.21.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^4.10.0",
