feat: add rudimentrary impl of zod to atom group
rudimentrary implementation, probably doesn't handle types probably

--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
       "module": "./dist/react/index.modern.js",
       "import": "./dist/react/index.modern.mjs",
       "default": "./dist/react/index.umd.js"
+    },
+    "./utils/zod": {
+      "types": "./dist/utils/src/utils/zod.d.ts",
+      "module": "./dist/utils/zod.modern.js",
+      "import": "./dist/utils/zod.modern.mjs",
+      "default": "./dist/utils/zod.umd.js"
     }
   },
   "sideEffects": false,
@@ -108,6 +114,12 @@
     "zod": "^3.22.4"
   },
   "peerDependencies": {
-    "jotai": ">=2"
+    "jotai": ">=2",
+    "zod": ">=3"
+  },
+  "peerDependenciesMeta": {
+    "zod": {
+      "optional": true
+    }
   }
 }
