--- a/package.json
+++ b/package.json
@@ -28,11 +28,17 @@
       "import": "./dist/react/index.modern.mjs",
       "default": "./dist/react/index.umd.js"
     },
-    "./utils/zod": {
+    "./zod": {
       "types": "./dist/utils/src/utils/zod.d.ts",
       "module": "./dist/utils/zod.modern.js",
       "import": "./dist/utils/zod.modern.mjs",
       "default": "./dist/utils/zod.umd.js"
+    },
+    "./yup": {
+      "types": "./dist/utils/src/utils/yup.d.ts",
+      "module": "./dist/utils/yup.modern.js",
+      "import": "./dist/utils/yup.modern.mjs",
+      "default": "./dist/utils/yup.umd.js"
     }
   },
   "sideEffects": false,
@@ -113,15 +119,19 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.1",
-    "yup": "^0.32.11",
+    "yup": "^1.4.0",
     "zod": "^3.22.4"
   },
   "peerDependencies": {
     "jotai": ">=2",
+    "yup": ">=1",
     "zod": ">=3"
   },
   "peerDependenciesMeta": {
     "zod": {
+      "optional": true
+    },
+    "yup": {
       "optional": true
     }
   }
